src/objects/Rate_Increase_Index__c.object
<CustomObject>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Rate Increase Indexes</relationshipLabel>
        <relationshipName>Rate_Increase_Indexes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Rate_From__c</fullName>
        <description>Start of the rate range</description>
        <label>Current Rate (From)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Rate_To__c</fullName>
        <inlineHelpText>End of the rate range</inlineHelpText>
        <label>Current Rate (To)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_Years__c</fullName>
        <label>Duration (Years)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date_From__c</fullName>
        <label>Effective Date (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_To__c</fullName>
        <label>Effective Date (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Increase__c</fullName>
        <label>Percent Increase</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Schedule</label>
        <referenceTo>Price_Schedule__c</referenceTo>
        <relationshipLabel>Rate Increase Indexes</relationshipLabel>
        <relationshipName>Rate_Increase_Indexes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Sub-Category</label>
        <referenceTo>Unit_Sub_Category__c</referenceTo>
        <relationshipLabel>Rate Increase Indexes</relationshipLabel>
        <relationshipName>Rate_Increase_Indexes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate Increase Index</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_RERA_Indexes</fullName>
        <columns>NAME</columns>
        <columns>Business_Park__c</columns>
        <columns>Unit_Sub_Category__c</columns>
        <columns>Effective_Date_From__c</columns>
        <columns>Effective_Date_To__c</columns>
        <columns>Current_Rate_From__c</columns>
        <columns>Current_Rate_To__c</columns>
        <columns>Percent_Increase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rate_Increase_Index__c.RERA</value>
        </filters>
        <label>All RERA Indexes</label>
    </listViews>
    <listViews>
        <fullName>All_Rate_Increase_Indexes</fullName>
        <columns>NAME</columns>
        <columns>Price_Schedule__c</columns>
        <columns>Order__c</columns>
        <columns>Duration_Years__c</columns>
        <columns>Percent_Increase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rate_Increase_Index__c.Rate_Increase</value>
        </filters>
        <label>All Rate Increase Indexes</label>
    </listViews>
    <nameField>
        <displayFormat>RI-{0000000}</displayFormat>
        <label>Rate Increase Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Increase Indexes</pluralLabel>
    <recordTypes>
        <fullName>RERA</fullName>
        <active>true</active>
        <description>Used for increases from an existing rate</description>
        <label>RERA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rate_Increase</fullName>
        <active>true</active>
        <description>Used for increases during an amount of time (e.g. revisions)</description>
        <label>Rate Increase</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>